# my_nix_configs

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  configuration.nix  devbox.json  flake.nix  fonts.nix  hardware-configuration.nix  home.nix  hyprland.nix  i3.nix  i3status-rust.nix  i3status-rust.toml  starship.nix  zoxide.nix
.github/workflows/: ci.yml
hosts/hagrid/: default.nix
hosts/hedwig/: default.nix  hardware-configuration.nix
hosts/luna/: default.nix  hardware-configuration.nix
i3_scripts/: .gitignore  default.nix  flake.nix  pyproject.toml  workspace.py
i3_scripts/i3_scripts/: workspace.py
modules/: hagrid.nix  hedwig.nix  hosts-assembler.nix  mss01-t4.nix  mss01-wks62.nix  options.nix
modules/_hm/: bash.nix  home-base.nix  i3.nix  terminator.nix  zoxide.nix  zsh.nix
modules/_nixos/hagrid/: default.nix  hardware-configuration.nix
modules/_nixos/hedwig/: default.nix  hardware-configuration.nix
src/hosts/: host-settings.nix
src/hosts/MSS01-T4/: default.nix  hardware-configuration.nix  settings.nix
src/hosts/MSS01-WKS62.motivss.local/: settings.nix
src/hosts/hagrid/: default.nix  settings.nix
src/hosts/hedwig/: default.nix  settings.nix
src/hosts/luna/: default.nix  hardware-configuration.nix  settings.nix
src/modules/: fonts.nix  git.nix  helix.nix  home.nix  hyprland.nix  i3.nix  i3status-rust.nix  terminator.nix  zsh.nix
